remove pointers and add mapping
