# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateUserModel"
+                            "$ref": "#/definitions/contracts.CreateUserRequest"
                         }
                     }
                 ],
@@ -37,11 +37,17 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.UserModel"
+                            "$ref": "#/definitions/contracts.UserResponse"
                         }
                     },
                     "400": {
                         "description": "invalid request body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "internal error",
                         "schema": {
                             "type": "string"
                         }
@@ -72,11 +78,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserModel"
+                            "$ref": "#/definitions/contracts.UserResponse"
                         }
                     },
                     "400": {
                         "description": "invalid id",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "not found",
                         "schema": {
                             "type": "string"
                         }
@@ -86,7 +98,7 @@
         }
     },
     "definitions": {
-        "models.CreateUserModel": {
+        "contracts.CreateUserRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -97,7 +109,7 @@
                 }
             }
         },
-        "models.UserModel": {
+        "contracts.UserResponse": {
             "type": "object",
             "properties": {
                 "email": {
