# routes/contracts/create_user_request.go
@@ -1,0 +1,7 @@
+package contracts
+
+// @name CreateUserRequest
+type CreateUserRequest struct {
+	Name  string `json:"name"`
+	Email string `json:"email"`
+}
